--- a/less/admin.less
+++ b/less/admin.less
@@ -12,6 +12,7 @@
 
     textarea {
       resize: vertical;
+      min-height: 100px;
       max-height: 800px;
 
       margin-top: 4px;
@@ -23,5 +24,18 @@
     label.Checkbox {
       font-weight: normal;
     }
+
+    label input {
+      font-weight: normal;
+      margin-top: 4px;
+    }
   }
+}
+
+.davwheat-ads-notice {
+  font-size: 16px;
+  padding-left: 12px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-left: @control-color 4px solid;
 }
