Improve ad spacing after placeholder

--- a/less/forum.less
+++ b/less/forum.less
@@ -2,7 +2,11 @@
   .DiscussionPage-nav,
   .DiscussionPage-nav > ul {
     position: sticky;
-    top: 80px;
+    top: 60px;
+  }
+
+  .App {
+    overflow-x: visible;
   }
 }
 
@@ -18,5 +22,11 @@
 .davwheat-ad {
   &-footer {
     margin-top: 48px;
+  }
+
+  &-between-posts {
+    &--after-placeholder {
+      margin-top: 16px;
+    }
   }
 }
