Only show sidebar ad on desktop and tablet

--- a/less/forum.less
+++ b/less/forum.less
@@ -1,4 +1,4 @@
-@media (min-width: 700px) {
+@media @tablet-up {
   .DiscussionPage-nav,
   .DiscussionPage-nav > ul {
     position: sticky;
@@ -7,6 +7,10 @@
 
   .App {
     overflow-x: visible;
+  }
+
+  .davwheat-ad-sidebar {
+    display: none;
   }
 }
 
