Hide ads that are unfilled by AdSense

--- a/less/forum.less
+++ b/less/forum.less
@@ -38,6 +38,11 @@
 }
 
 .davwheat-ad {
+  ins[data-ad-status="unfilled"] {
+    // Hide unfilled ads
+    display: none !important;
+  }
+
   &-footer {
     margin-top: 48px;
   }
