--- a/less/forum.less
+++ b/less/forum.less
@@ -38,7 +38,7 @@
 }
 
 .davwheat-ad {
-  ins[data-ad-status="unfilled"] {
+  ins.adsbygoogle[data-ad-status="unfilled"] {
     // Hide unfilled ads
     display: none !important;
   }
