--- a/less/admin.less
+++ b/less/admin.less
@@ -39,3 +39,17 @@
   padding-bottom: 4px;
   border-left: @control-color 4px solid;
 }
+
+.davwheat-ads {
+  &__code-boxes {
+    display: flex;
+
+    > * {
+      flex-basis: calc(50% - 4px);
+    }
+
+    :first-child {
+      margin-right: 8px;
+    }
+  }
+}
