fix: no padding at bottom of page (fixes #2)

--- a/less/forum.less
+++ b/less/forum.less
@@ -28,10 +28,6 @@
   }
 }
 
-.App {
-  padding-bottom: 0;
-}
-
 .Post::before,
 .Post::after {
   content: none;
@@ -45,6 +41,8 @@
 
   &-footer {
     margin-top: 48px;
+    padding-bottom: 8px;
+    margin-bottom: -50px;
   }
 
   &-between-posts {
